--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,8 @@ a {
   header a {
     color: #666; }
 
-button {
+button,
+.button {
   background-color: #037569;
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(102, 102, 102, 0.5);
@@ -50,11 +51,13 @@ button {
   padding: 1em 1.25em;
   text-transform: uppercase;
   transition: background-color .5s; }
-  button:hover {
+  button:hover,
+  .button:hover {
     background-color: #048e7f;
     color: #FFF;
     transition: background-color .5s; }
-  button.full {
+  button.full,
+  .button.full {
     width: 100%; }
 
 /* ===== header ===== */
@@ -143,6 +146,31 @@ header {
             padding: 0; }
             header > div nav a:nth-of-type(2) {
               margin: 0 1.5em; } }
+
+/* ===== portfolio ===== */
+.portfolio > article {
+  align-items: flex-start;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin: 5em 0;
+  min-width: 300px; }
+  .portfolio > article:first-of-type {
+    margin-top: 2.5em; }
+    .portfolio > article:first-of-type .placeholder {
+      background: #666;
+      height: 300px;
+      flex: 0 1 62%; }
+    .portfolio > article:first-of-type .details {
+      flex: 0 1 34%; }
+  .portfolio > article .button {
+    display: inline-block;
+    font-weight: normal;
+    letter-spacing: .5px;
+    text-transform: lowercase; }
 
 footer {
   background-color: #F02E11;
@@ -273,10 +301,6 @@ textarea:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px #F9F9F9 inset !important;
   box-shadow: 0 0 0px 1000px #F9F9F9 inset !important; }
 
-/* NEW FORM
-    - decide between dotted or double underlines?
-      OROROR dotted outline. dots are accents, double underlines are main elements
-*/
 /* == Do not mistake temptation for opportunity. == */
 
 /*# sourceMappingURL=styles.css.map */
