--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -3,19 +3,21 @@
   > article {
     @include flexbox();
     box-sizing: border-box;
-    margin: 5em 0;
+    margin: 10em 0;
     min-width: 300px;
     &:first-of-type {
       margin-top: 2.5em;
+    }
+    &.right {
+      flex-flow: row-reverse;
+    }
     .placeholder {
       background: $dark-grey;
       height: 300px;
-      //width: 60%;
       flex: 0 1 62%;
     }
     .details {
       flex: 0 1 34%;
-    }
     }
     .button {
       display: inline-block;
