--- a/css/styles.css
+++ b/css/styles.css
@@ -234,8 +234,11 @@ header {
   flex-flow: row wrap;
   justify-content: space-between;
   box-sizing: border-box;
-  margin: 10em 0;
+  margin: 7em 0;
   min-width: 300px; }
+  @media (min-width: 60em) {
+    .portfolio > article {
+      margin: 10em 0; } }
   .portfolio > article:first-of-type {
     margin-top: 2.5em; }
   .portfolio > article.right {
@@ -248,20 +251,39 @@ header {
     flex: 0 1 100%;
     height: 300px;
     margin-bottom: 2em; }
-    @media (min-width: 46em) {
+    @media (min-width: 60em) {
       .portfolio > article .placeholder {
+        flex: 0 1 62%;
+        margin-bottom: 0; } }
+  .portfolio > article .img:hover, .portfolio > article .img:active {
+    border-color: transparent;
+    opacity: 1; }
+  .portfolio > article img {
+    box-shadow: 0 2px 4px rgba(102, 102, 102, 0.5);
+    flex: 0 1 100%;
+    height: auto;
+    margin-bottom: 1em;
+    max-width: 100%;
+    width: 100%; }
+    @media (min-width: 60em) {
+      .portfolio > article img {
         flex: 0 1 62%;
         margin-bottom: 0; } }
   .portfolio > article .details {
     flex: 0 1 100%; }
-    @media (min-width: 46em) {
+    @media (min-width: 60em) {
       .portfolio > article .details {
-        flex: 0 1 34%; } }
+        flex: 0 1 30%; } }
   .portfolio > article .button {
-    display: inline-block;
+    display: block;
     font-weight: normal;
     letter-spacing: .5px;
+    text-align: center;
     text-transform: lowercase; }
+    @media (min-width: 32em) {
+      .portfolio > article .button {
+        display: inline-block;
+        text-align: left; } }
 
 footer {
   background-color: #F02E11;
