--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Roboto Slab", Georgia, serif;
   font-weight: bold;
-  margin: .5em 0; }
+  margin: .5em 0 1em; }
 
 h1 {
   font-size: 2.75em; }
@@ -246,7 +246,7 @@ header {
     .portfolio > article {
       margin: 10em 0; } }
   .portfolio > article:first-of-type {
-    margin-top: 2.5em; }
+    margin-top: 5em; }
   .portfolio > article.right {
     flex-flow: row-reverse;
     flex-wrap: wrap; }
