--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -18,32 +18,10 @@
     h3 {
       margin-top: 0;
     }
-    .placeholder {
-      background: $dark-grey;
-      flex: 0 1 100%;
-      height: 300px;
-      margin-bottom: 2em;
-      @include responsiveMin(60em) {
-        flex: 0 1 62%;
-        margin-bottom: 0;
-      }
-    }
     .img {
       &:hover, &:active {
         border-color: transparent;
         opacity: 1;
-      }
-    }
-    img {
-      box-shadow: 0 2px 4px rgba($dark-grey, .5);
-      flex: 0 1 100%;
-      height: auto;
-      margin-bottom: 1em;
-      max-width: 100%;
-      width: 100%;
-      @include responsiveMin(60em) {
-        flex: 0 1 62%;
-        margin-bottom: 0;
       }
     }
     .details {
@@ -59,6 +37,32 @@
         display: inline-block;
         text-align: left;
       }
+    }
+  }
+}
+.progressive {
+  overflow: hidden;
+  position: relative;
+  img {
+    box-shadow: 0 2px 4px rgba($dark-grey, .5);
+    flex: 0 1 100%;
+    height: auto;
+    margin-bottom: 1em;
+    max-width: 600px;
+    width: 100%;
+    @include responsiveMin(60em) {
+      flex: 0 1 62%;
+      margin-bottom: 0;
+    }
+    &.lowres {
+      @include prefix(filter, blur(5px), webkit)
+    }
+    &.overlay {
+      left: 0;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      transition: opacity 200ms ease-in;
     }
   }
 }
