--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -1,11 +1,12 @@
 /* ===== portfolio ===== */
 .portfolio {
   > article {
-    @include flexbox();
+    @include flexbox($justify-content: center);
     box-sizing: border-box;
     margin: 7em 0;
     min-width: 300px;
     @include responsiveMin(60em) {
+      justify-content: space-between;
       margin: 10em 0;
     }
     &:first-of-type {
@@ -24,6 +25,18 @@
         opacity: 1;
       }
     }
+    img {
+      box-shadow: 0 2px 4px rgba($dark-grey, .5);
+      flex: 0 1 100%;
+      height: auto;
+      margin-bottom: 1em;
+      max-width: 600px;
+      width: 100%;
+      @include responsiveMin(60em) {
+        flex: 0 1 62%;
+        margin-bottom: 0;
+      }
+    }
     .details {
       flex: 0 1 100%;
       @include responsiveMin(60em) {
@@ -37,32 +50,6 @@
         display: inline-block;
         text-align: left;
       }
-    }
-  }
-}
-.progressive {
-  overflow: hidden;
-  position: relative;
-  img {
-    box-shadow: 0 2px 4px rgba($dark-grey, .5);
-    flex: 0 1 100%;
-    height: auto;
-    margin-bottom: 1em;
-    max-width: 600px;
-    width: 100%;
-    @include responsiveMin(60em) {
-      flex: 0 1 62%;
-      margin-bottom: 0;
-    }
-    &.lowres {
-      @include prefix(filter, blur(5px), webkit)
-    }
-    &.overlay {
-      left: 0;
-      opacity: 0;
-      position: absolute;
-      top: 0;
-      transition: opacity 200ms ease-in;
     }
   }
 }
