--- a/css/_animate.scss
+++ b/css/_animate.scss
@@ -4,36 +4,40 @@
   position: relative;
   img {
     &.lowres {
-      @include prefix((
-        filter: blur(5px)
-      ), webkit)
+      @include prefix((filter: blur(5px)), webkit);
     }
     &.overlay {
       left: 0;
       opacity: 0;
       position: absolute;
       top: 0;
-      transition: opacity 400ms ease-in;
+      transition: opacity .4s ease-in;
     }
   }
 }
 .animate {
   &.fade {
     article {
-      -ms-transform: translate(0px, 200px);
-      @include prefix((
-        transform: translate3d(0px, 200px, 0px),
-        backface-visibility: hidden
-      ), webkit);
       opacity: 0;
-      transition: all 700ms ease-out;
+      transition: all .7s ease-out;
       &.in-view {
-        -ms-transform: translate(0px, 0px, 0px);
-        @include prefix((
-          transform: translate3d(0px, 0px, 0px),
-        ), webkit);
         opacity: 1;
+      }
+      &.slide {
+        -ms-transform: translate(0px, 200px);
+        @include prefix((
+          transform: translate3d(0px, 200px, 0px),
+          backface-visibility: hidden
+        ), webkit);
+        &.in-view {
+          -ms-transform: translate(0px, 0px, 0px);
+          @include prefix((transform: translate3d(0px, 0px, 0px),), webkit);
+        }
       }
     }
   }
+}
+#content {
+  opacity: 0;
+  transition: opacity .7s ease-in;
 }
